# OmegaGo

./: CMakeLists.txt  Makefile  a.out  board_gui.h  definitions.h  engine.cpp  engine.h  engine2.cpp  engine2.h  game.cpp  game.h  gamestate.cpp  gamestate.h  glad.c  line.h  main.cpp  shader.h  test  test.cpp  testcpp  testglm.cpp  twoplayer  twoplayer.cpp  zeGUI.h
engine/: CMakeLists.txt  engine.cpp
glad/: CMakeLists.txt  glad.c  glad.h
include/: board_gui.h  shader.h
include/engine/: engine.cpp  engine.h
include/glad/: CMakeLists.txt  glad.h
twoplayer/: CMakeLists.txt  twoplayer.cpp
